@@ -289,7 +289,7 @@ div.olControlMousePosition {
 }
 
 .olPopupContent {
-    padding:5px;
+    padding:1px;
     overflow: auto;
 }    
 .olControlNavToolbar { 
